--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       context: ./back
       dockerfile: Dockerfile
     container_name: back
+    command: php artisan serve --host=0.0.0.0 --port=8000
     ports:
       - "8000:8000"
     volumes:
@@ -13,34 +14,35 @@ services:
     environment:
       - APP_ENV=local
       - DB_CONNECTION=mysql
-      - DB_HOST=db
+      - DB_HOST=siview_db
       - DB_PORT=3306
-      - DB_DATABASE=expenses
+      - DB_DATABASE=siview
       - DB_USERNAME=root
       - DB_PASSWORD=root
     depends_on:
-      - db
+      - siview_db
     networks:
       - siview_net
 
-  front:
-    build:
-      context: ./front
-      dockerfile: Dockerfile
-    container_name: front
-    ports:
-      - "8080:80"
-    depends_on:
-      - back
-    environment:
-      - NODE_TLS_REJECT_UNAUTHORIZED=0
-    volumes:
-      - ./front:/app
-    networks:
-      - siview_net
+  # front:
+  #   build:
+  #     context: ./front
+  #     dockerfile: Dockerfile
+  #   container_name: front
+  #   ports:
+  #     - "8080:80"
+  #   depends_on:
+  #     - back
+  #   environment:
+  #     - NODE_TLS_REJECT_UNAUTHORIZED=0
+  #   volumes:
+  #     - ./front:/app
+  #   networks:
+  #     - siview_net
 
-  db:
+  siview_db:
     image: mysql:8.0
+    container_name: siview_db
     ports:
       - "3306:3306"
     environment:
@@ -57,10 +59,12 @@ services:
     ports:
       - "8081:80"
     environment:
-      PMA_HOST: db
+      PMA_HOST: siview_db
       MYSQL_ROOT_PASSWORD: root
     depends_on:
-      - db
+      - siview_db
+    networks:
+      - siview_net
 
 volumes:
   db_data:
