Fix docker - Wip

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,39 +24,22 @@ services:
     networks:
       - siview_net
 
-<<<<<<< HEAD
   front:
-    container_name: my_frontend
-    image: node:lts
+    build:
+      context: ./front
+      dockerfile: Dockerfile
+    container_name: front
     working_dir: /var/www/html/app
+    entrypoint: [ "sh", "-c", "npm install && npm run dev" ]
     ports:
-      - 8080:8080
-    command: sh -c "npm install --legacy-peer-deps && npm run dev"
+      - "8080:8080"
     volumes:
       - ./front:/var/www/html/app
     depends_on:
       - back
     networks:
       - siview_net
-        
-=======
-  # front:
-  #   build:
-  #     context: ./front
-  #     dockerfile: Dockerfile
-  #   container_name: front
-  #   ports:
-  #     - "8080:80"
-  #   depends_on:
-  #     - back
-  #   environment:
-  #     - NODE_TLS_REJECT_UNAUTHORIZED=0
-  #   volumes:
-  #     - ./front:/app
-  #   networks:
-  #     - siview_net
 
->>>>>>> parent of bc8450a (Final global projet)
   siview_db:
     image: mysql:8.0
     container_name: siview_db
@@ -85,7 +68,7 @@ services:
 
 volumes:
   db_data:
-  
+
 networks:
   siview_net:
     driver: bridge
